--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,18 +1,25 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.todome">
 
+    <!-- 1. IZIN INTERNET (WAJIB UNTUK AKSES SERVER ONLINE) -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <!-- 2. IZIN KAMERA -->
     <uses-permission android:name="android.permission.CAMERA"/>
-    
     <uses-feature android:name="android.hardware.camera" android:required="false" />
 
+    <!-- 3. IZIN GALERI (FOTO) -->
+    <!-- Untuk Android 12 ke bawah -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    
+    <!-- Untuk Android 13 ke atas -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
 
     <application
         android:label="todome"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        
         
         <activity
             android:name=".MainActivity"
