--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,31 +1,45 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.todome">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    
+    <!-- ================================================= -->
+    <!--                 DAFTAR PERIZINAN                  -->
+    <!-- ================================================= -->
 
-    <!-- 1. IZIN INTERNET (WAJIB UNTUK AKSES SERVER ONLINE) -->
+    <!-- 1. INTERNET & NETWORK (Wajib untuk API & Cek Koneksi) -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <!-- 2. IZIN KAMERA -->
+    <!-- 2. NOTIFIKASI (PENTING: Agar fitur alarm deadline jalan) -->
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <!-- Android 12+ (API 31+) -->
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
+    <!-- Android 13+ (API 33+) -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
+    <!-- 3. KAMERA (Untuk Edit Profile) -->
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-feature android:name="android.hardware.camera" android:required="false" />
 
-    <!-- 3. IZIN GALERI (FOTO) -->
-    <!-- Untuk Android 12 ke bawah -->
+    <!-- 4. GALERI / STORAGE (Untuk Upload Foto) -->
+    <!-- Android 12 ke bawah -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <!-- Untuk Android 13 ke atas -->
+    <!-- Android 13 ke atas (Media Images) -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
 
+
+    <!-- ================================================= -->
+    <!--                 APLIKASI                          -->
+    <!-- ================================================= -->
     <application
-        android:label="todome"
+        android:label="To Do Me"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
-        
         
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
-            android:taskAffinity=""
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
@@ -46,6 +60,9 @@
             android:value="2" />
     </application>
 
+    <!-- ================================================= -->
+    <!--                 QUERIES                           -->
+    <!-- ================================================= -->
     <queries>
         <intent>
             <action android:name="android.intent.action.PROCESS_TEXT"/>
